feat(security): Implement JWT authentication and exception handling
- Added JWT authentication to secure API endpoints.
- Created a JwtAuthenticationFilter to intercept requests and validate tokens.
- Implemented UserDetailsService to load user-specific data.
- Introduced custom exception handling for improved error responses.
- Added global exception handler to manage exceptions and provide meaningful messages.
- Updated application properties for security configurations.